// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DurationFormatEditor should not render show suffix on dynamic output 1`] = `
<Fragment>
  <EuiFormRow
    describedByIds={Array []}
    display="row"
    fullWidth={false}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    isInvalid={false}
    label={
      <FormattedMessage
        defaultMessage="Input format"
        id="indexPatternFieldEditor.duration.inputFormatLabel"
        values={Object {}}
      />
    }
    labelType="label"
  >
    <EuiSelect
      data-test-subj="durationEditorInputFormat"
      isInvalid={false}
      onChange={[Function]}
      options={
        Array [
          Object {
            "text": "Seconds",
            "value": "seconds",
          },
        ]
      }
      value=""
    />
  </EuiFormRow>
  <EuiFormRow
    describedByIds={Array []}
    display="row"
    fullWidth={false}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    isInvalid={false}
    label={
      <FormattedMessage
        defaultMessage="Output format"
        id="indexPatternFieldEditor.duration.outputFormatLabel"
        values={Object {}}
      />
    }
    labelType="label"
  >
    <EuiSelect
      data-test-subj="durationEditorOutputFormat"
      isInvalid={false}
      onChange={[Function]}
      options={
        Array [
          Object {
            "text": "Human Readable",
            "value": "humanize",
          },
          Object {
            "text": "Minutes",
            "value": "asMinutes",
          },
        ]
      }
      value="dynamic"
    />
  </EuiFormRow>
  <EuiFormRow
    describedByIds={Array []}
    display="row"
    error={null}
    fullWidth={false}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    isInvalid={false}
    label={
      <FormattedMessage
        defaultMessage="Decimal places"
        id="indexPatternFieldEditor.duration.decimalPlacesLabel"
        values={Object {}}
      />
    }
    labelType="label"
  >
    <EuiFieldNumber
      isInvalid={false}
      max={20}
      min={0}
      onChange={[Function]}
      value={2}
    />
  </EuiFormRow>
  <EuiFormRow
    describedByIds={Array []}
    display="row"
    fullWidth={false}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    labelType="label"
  >
    <EuiSwitch
      checked={false}
      disabled={false}
      label={
        <FormattedMessage
          defaultMessage="Use short suffix"
          id="indexPatternFieldEditor.duration.showSuffixLabel.short"
          values={Object {}}
        />
      }
      onChange={[Function]}
    />
  </EuiFormRow>
  <EuiFormRow
    describedByIds={Array []}
    display="row"
    fullWidth={false}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    labelType="label"
  >
    <EuiSwitch
      checked={true}
      disabled={false}
      label={
        <FormattedMessage
          defaultMessage="Include space between suffix and value"
          id="indexPatternFieldEditor.duration.includeSpace"
          values={Object {}}
        />
      }
      onChange={[Function]}
    />
  </EuiFormRow>
  <FormatEditorSamples
    sampleType="text"
    samples={
      Array [
        Object {
          "input": -123,
          "output": "converted duration for -123",
        },
        Object {
          "input": 1,
          "output": "converted duration for 1",
        },
        Object {
          "input": 12,
          "output": "converted duration for 12",
        },
        Object {
          "input": 123,
          "output": "converted duration for 123",
        },
        Object {
          "input": 658,
          "output": "converted duration for 658",
        },
        Object {
          "input": 1988,
          "output": "converted duration for 1988",
        },
        Object {
          "input": 3857,
          "output": "converted duration for 3857",
        },
        Object {
          "input": 123292,
          "output": "converted duration for 123292",
        },
        Object {
          "input": 923528271,
          "output": "converted duration for 923528271",
        },
      ]
    }
  />
</Fragment>
`;

exports[`DurationFormatEditor should render human readable output normally 1`] = `
<Fragment>
  <EuiFormRow
    describedByIds={Array []}
    display="row"
    fullWidth={false}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    isInvalid={false}
    label={
      <FormattedMessage
        defaultMessage="Input format"
        id="indexPatternFieldEditor.duration.inputFormatLabel"
        values={Object {}}
      />
    }
    labelType="label"
  >
    <EuiSelect
      data-test-subj="durationEditorInputFormat"
      isInvalid={false}
      onChange={[Function]}
      options={
        Array [
          Object {
            "text": "Seconds",
            "value": "seconds",
          },
        ]
      }
      value=""
    />
  </EuiFormRow>
  <EuiFormRow
    describedByIds={Array []}
    display="row"
    fullWidth={false}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    isInvalid={false}
    label={
      <FormattedMessage
        defaultMessage="Output format"
        id="indexPatternFieldEditor.duration.outputFormatLabel"
        values={Object {}}
      />
    }
    labelType="label"
  >
    <EuiSelect
      data-test-subj="durationEditorOutputFormat"
      isInvalid={false}
      onChange={[Function]}
      options={
        Array [
          Object {
            "text": "Human Readable",
            "value": "humanize",
          },
          Object {
            "text": "Minutes",
            "value": "asMinutes",
          },
        ]
      }
      value=""
    />
  </EuiFormRow>
  <FormatEditorSamples
    sampleType="text"
    samples={
      Array [
        Object {
          "input": -123,
          "output": "converted duration for -123",
        },
        Object {
          "input": 1,
          "output": "converted duration for 1",
        },
        Object {
          "input": 12,
          "output": "converted duration for 12",
        },
        Object {
          "input": 123,
          "output": "converted duration for 123",
        },
        Object {
          "input": 658,
          "output": "converted duration for 658",
        },
        Object {
          "input": 1988,
          "output": "converted duration for 1988",
        },
        Object {
          "input": 3857,
          "output": "converted duration for 3857",
        },
        Object {
          "input": 123292,
          "output": "converted duration for 123292",
        },
        Object {
          "input": 923528271,
          "output": "converted duration for 923528271",
        },
      ]
    }
  />
</Fragment>
`;

exports[`DurationFormatEditor should render non-human readable output normally 1`] = `
<Fragment>
  <EuiFormRow
    describedByIds={Array []}
    display="row"
    fullWidth={false}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    isInvalid={false}
    label={
      <FormattedMessage
        defaultMessage="Input format"
        id="indexPatternFieldEditor.duration.inputFormatLabel"
        values={Object {}}
      />
    }
    labelType="label"
  >
    <EuiSelect
      data-test-subj="durationEditorInputFormat"
      isInvalid={false}
      onChange={[Function]}
      options={
        Array [
          Object {
            "text": "Seconds",
            "value": "seconds",
          },
        ]
      }
      value=""
    />
  </EuiFormRow>
  <EuiFormRow
    describedByIds={Array []}
    display="row"
    fullWidth={false}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    isInvalid={false}
    label={
      <FormattedMessage
        defaultMessage="Output format"
        id="indexPatternFieldEditor.duration.outputFormatLabel"
        values={Object {}}
      />
    }
    labelType="label"
  >
    <EuiSelect
      data-test-subj="durationEditorOutputFormat"
      isInvalid={false}
      onChange={[Function]}
      options={
        Array [
          Object {
            "text": "Human Readable",
            "value": "humanize",
          },
          Object {
            "text": "Minutes",
            "value": "asMinutes",
          },
        ]
      }
      value=""
    />
  </EuiFormRow>
  <EuiFormRow
    describedByIds={Array []}
    display="row"
    error={null}
    fullWidth={false}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    isInvalid={false}
    label={
      <FormattedMessage
        defaultMessage="Decimal places"
        id="indexPatternFieldEditor.duration.decimalPlacesLabel"
        values={Object {}}
      />
    }
    labelType="label"
  >
    <EuiFieldNumber
      isInvalid={false}
      max={20}
      min={0}
      onChange={[Function]}
      value={2}
    />
  </EuiFormRow>
  <EuiFormRow
    describedByIds={Array []}
    display="row"
    fullWidth={false}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    labelType="label"
  >
    <EuiSwitch
      checked={false}
      label={
        <FormattedMessage
          defaultMessage="Show suffix"
          id="indexPatternFieldEditor.duration.showSuffixLabel"
          values={Object {}}
        />
      }
      onChange={[Function]}
    />
  </EuiFormRow>
  <EuiFormRow
    describedByIds={Array []}
    display="row"
    fullWidth={false}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    labelType="label"
  >
    <EuiSwitch
      checked={false}
      disabled={true}
      label={
        <FormattedMessage
          defaultMessage="Use short suffix"
          id="indexPatternFieldEditor.duration.showSuffixLabel.short"
          values={Object {}}
        />
      }
      onChange={[Function]}
    />
  </EuiFormRow>
  <EuiFormRow
    describedByIds={Array []}
    display="row"
    fullWidth={false}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    labelType="label"
  >
    <EuiSwitch
      checked={true}
      disabled={true}
      label={
        <FormattedMessage
          defaultMessage="Include space between suffix and value"
          id="indexPatternFieldEditor.duration.includeSpace"
          values={Object {}}
        />
      }
      onChange={[Function]}
    />
  </EuiFormRow>
  <FormatEditorSamples
    sampleType="text"
    samples={
      Array [
        Object {
          "input": -123,
          "output": "converted duration for -123",
        },
        Object {
          "input": 1,
          "output": "converted duration for 1",
        },
        Object {
          "input": 12,
          "output": "converted duration for 12",
        },
        Object {
          "input": 123,
          "output": "converted duration for 123",
        },
        Object {
          "input": 658,
          "output": "converted duration for 658",
        },
        Object {
          "input": 1988,
          "output": "converted duration for 1988",
        },
        Object {
          "input": 3857,
          "output": "converted duration for 3857",
        },
        Object {
          "input": 123292,
          "output": "converted duration for 123292",
        },
        Object {
          "input": 923528271,
          "output": "converted duration for 923528271",
        },
      ]
    }
  />
</Fragment>
`;
